Nav spacing fix for subheaders
Adjusted nav spacing has now been applied to subheaders, heroes, and
the can-we feature (all of which need the negative top margin when
paired with the core navigation).

--- a/css/scu-less/partials/subheaders.less
+++ b/css/scu-less/partials/subheaders.less
@@ -116,13 +116,13 @@
   .site-header.uses-core-navigation + & {
     margin-top: -20px;
     @media (min-width: @screen-sm-min) {
-      margin-top: -55px;
+      margin-top: -30px;
     }
     @media (min-width: @screen-md-min) {
-      margin-top: -78px;
+      margin-top: -53px;
     }
     @media (min-width: @screen-lg-min) {
-      margin-top: -80px;
+      margin-top: -55px;
     }
   }
 }
